[gd_scene load_steps=9 format=3 uid="uid://dwrdvvbko1xvq"]

[ext_resource type="Script" uid="uid://ddomrldg156n0" path="res://scenes/animal/animal.gd" id="1_428fe"]
[ext_resource type="Texture2D" uid="uid://b6teaw0hkq02e" path="res://assets/player/kaisa.jpeg" id="1_tlpey"]
[ext_resource type="Texture2D" uid="uid://brs85788hebvv" path="res://assets/items/arrow.png" id="3_jp7rm"]
[ext_resource type="AudioStream" uid="uid://bt47t2abtg1q1" path="res://assets/audio/stretch2.ogg" id="4_lwbc0"]
[ext_resource type="AudioStream" uid="uid://dp75p7hfdh5pl" path="res://assets/audio/catapult.ogg" id="5_lwbc0"]
[ext_resource type="AudioStream" uid="uid://csjdf561cyyqn" path="res://assets/audio/kick_wood.ogg" id="6_4tqkp"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lwbc0"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_428fe"]
radius = 19.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_lwbc0")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_428fe")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_tlpey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_428fe")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(2.01038, 2)

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_jp7rm")
offset = Vector2(150, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lwbc0")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lwbc0")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_4tqkp")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
